# BamblBi_Translator

./: ASM_MC.h  ASM_MC_JMPs.h  ASM_MC_new.h  ASM_commands.h  ASM_commands_name.h  CMakeLists.txt  JMPs.h  SourceCodeNasm.cpp  SourceCodeNasm.h  main.cpp  main_lib.cpp  main_lib.h
ASM_Lib/: ASM_ModR_M.h  ASM_Opcode.cpp  ASM_Opcode.h  ASM_Prefixes.cpp  ASM_Prefixes.h  ASM_Registers.h  ASM_SIB.h  NameCommands.cpp  NameCommands.h  Translate.cpp  Translate.h  directives.cpp  directives.h
ELF/: elf_prog_header.cpp  elf_prog_header.h
asm/: mystdlib.s  mystdmacro.s  start_test_  temp  test.s  test2.s  test3.s
